Add folders and files

--- a/AWS_projecto/apache2.conf
+++ b/AWS_projecto/apache2.conf
@@ -54,6 +54,7 @@ Require all granted
 
 <Directory /var/www/html/aussichtsturm/media>
 Require all granted
+</Directory>
 
 WSGIScriptAlias / /var/www/html/aussichtsturm/aussichtsturm/wsgi.py
 
