--- a/AWS_projecto/requirements.txt
+++ b/AWS_projecto/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.15.1
 charset-normalizer==3.0.1
 cryptography==38.0.4
 Django==4.1.7
+django-extensions==3.2.1
 django-globals==0.3.2
 ecdsa==0.18.0
 esptool==4.4
@@ -25,6 +26,7 @@ pycparser==2.21
 pyparsing==3.0.9
 pyserial==3.5
 python-dateutil==2.8.2
+python-decouple==3.8
 pytz==2022.7.1
 reedsolo==1.5.4
 requests==2.28.2
